# wonk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/agent-memory/groundwork-task-executor-task-executor/: MEMORY.md
.github/workflows/: ci.yml  release.yml
bench/: README.md  agent_bench.py  analyze_sessions.py  tasks.json  token_bench.sh
docs/: commands.md  configuration.md
homebrew/: wonk.rb
specs/: architecture.md  product_specs.md  tasks.md  todo_notes.md
specs/.claude/agent-memory/groundwork-task-executor-task-executor/: MEMORY.md
src/: blast.rs  budget.rs  callgraph.rs  cli.rs  cluster.rs  color.rs  config.rs  context.rs  daemon.rs  db.rs  delegate.rs  embedding.rs  errors.rs  flows.rs  impact.rs  indexer.rs  lib.rs  llm.rs  main.rs  mcp.rs  output.rs  pipeline.rs  progress.rs  ranker.rs  router.rs  search.rs  semantic.rs  show.rs  summary.rs  types.rs  walker.rs  watcher.rs
tests/: ask_integration.rs  mcp_integration.rs  worktree_integration.rs
